@@ -24,6 +24,9 @@ repositories {
 }
 
 dependencies {
+	implementation("org.springframework.boot:spring-boot-docker-compose")
+	implementation("jakarta.validation:jakarta.validation-api:3.0.2")
+	implementation("org.hibernate.validator:hibernate-validator:8.0.0.Final")
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-web-services")
 	compileOnly("org.projectlombok:lombok")
@@ -32,9 +35,20 @@ dependencies {
 	runtimeOnly("org.postgresql:postgresql")
 	annotationProcessor("org.projectlombok:lombok")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.mockito:mockito-core:5.5.0")
+	testCompileOnly("org.mockito:mockito-inline:5.2.0")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+
+	//See: https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html
+	val mockitoInlineJar = configurations.testRuntimeClasspath.get().files
+		.find { it.name.contains("mockito-inline") }
+
+	if (mockitoInlineJar != null) {
+		jvmArgs("-javaagent:${mockitoInlineJar}")
+	}
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
